# snappy

./: README  configure.ac  snappy.doap
data/: Makefile.am
src/: Makefile.am  gst_engine.c  simple-client.c  snappy.c  snra-client.c  snra-client.h  user_interface.c  user_interface.h  utils.c  utils.h
