icons_DATA = \
    audio-volume-high.png \
    audio-volume-low.png \
    fullscreen-toggle.png \
    media-actions-pause.png \
    media-actions-segment-point.png \
    media-actions-start.png \
    quit.png \
    video-stream-toggle.png \
    vid-panel.png
iconsdir = $(datadir)/snappy

EXTRA_DIST = \
    $(icons_DATA)
